--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
 	"name": "databricks-vscode",
 	"displayName": "Databricks VSCode",
 	"description": "Databricks Extension for VSCode",
-	"version": "0.8.7",
+	"version": "0.8.9",
 	"publisher": "paiqo",
 	"icon": "resources/databricks_extension.png",
 	"author": {
 		"name": "Gerhard Brueckl"
 	},
-	"license": "GPLv3",
+	"license": "GPL-3.0-or-later",
 	"homepage": "https://github.com/paiqo/Databricks-VSCode/blob/master/README.md",
 	"repository": {
 		"type": "git",
@@ -918,33 +918,34 @@
 	},
 	"devDependencies": {
 		"@types/mkdirp": "^0.5.2",
-		"@types/node": "^10.17.51",
-		"@types/rimraf": "^2.0.4",
+		"@types/node": "^10.17.60",
+		"@types/rimraf": "^2.0.5",
 		"@types/vscode": "^1.43.0",
-		"ts-loader": "^8.0.17",
+		"ts-loader": "^8.3.0",
 		"tslint": "^5.20.1",
-		"typescript": "^3.9.9",
-		"webpack": "^5.21.2",
-		"webpack-cli": "^4.5.0"
+		"typescript": "^3.9.10",
+		"webpack": "^5.62.1",
+		"webpack-cli": "^4.9.1"
 	},
 	"dependencies": {
 		"@angular/common": "^8.2.14",
 		"@angular/core": "^8.2.14",
 		"angular": "^1.8.2",
-		"axios": "^0.21.2",
+		"axios": "^0.21.4",
 		"file-saver": "^2.0.5",
-		"follow-redirects": "^1.13.1",
+		"follow-redirects": "^1.14.5",
 		"ftp": "^0.3.10",
 		"jsonc-parser": "^0.4.2",
 		"keytar": "^5.6.0",
 		"minimist": "^1.2.5",
 		"mkdirp": "^0.5.1",
-		"promise.prototype.finally": "^3.1.2",
-		"replace-in-file": "^6.2.0",
+		"promise.prototype.finally": "^3.1.3",
+		"replace-in-file": "^6.3.2",
 		"request": "^2.88.2",
 		"rimraf": "^2.6.2",
-		"rxjs": "^6.6.3",
+		"rxjs": "^6.6.7",
 		"sync-request": "^6.1.0",
-		"uniquefilename": "^1.1.2"
+		"uniquefilename": "^1.1.2",
+		"zone.js": "^0.9.1"
 	}
 }
