--- a/package.json
+++ b/package.json
@@ -87,8 +87,8 @@
 						"default": "SystemKeyChain",
 						"enumDescriptions": [
 							"Databricks Personal Access Token is stored in the VSCode Settings as plain text! There is a potential risk that the PAT gets checked in to source control systems like git!",
-							"(Experimental!) Databricks Personal Access Token is securely stored in the System Key Chain. Easy Copying/Sharing connections with other users is not possible this way. VSCode only stores a reference to the the KeyChain entry.",
-							"(Experimental!) Databricks Personal Access Token is stored in an external Config file. This is useful to manage all your PATs in one place and also easily share it"
+							"Databricks Personal Access Token is securely stored in the System Key Chain. Easy Copying/Sharing connections with other users is not possible this way. VSCode only stores a reference to the the Systems KeyChain entry.",
+							"(Experimental!) Databricks Personal Access Token is stored in an external Config file. This is useful to manage all your PATs in one place and also easily share them."
 						],
 						"description": "Defines the default how the VSCode extension for Databricks stores sensitive values like the Databricks Personal Access Token (PAT). Only releveant if the VSCode Connection Manager is used!",
 						"scope": "window"
@@ -990,9 +990,8 @@
 		"webpack-cli": "^4.9.1"
 	},
 	"dependencies": {
-		"@angular/common": "^8.2.14",
-		"@angular/core": "^8.2.14",
-		"angular": "^1.8.2",
+		"@angular/common": "^14.0.1",
+		"@angular/core": "^14.0.1",
 		"axios": "^0.21.4",
 		"file-saver": "^2.0.5",
 		"follow-redirects": "^1.14.8",
@@ -1008,7 +1007,6 @@
 		"rimraf": "^2.6.2",
 		"rxjs": "^6.6.7",
 		"sync-request": "^6.1.0",
-		"uniquefilename": "^1.1.2",
-		"zone.js": "^0.9.1"
+		"uniquefilename": "^1.1.2"
 	}
 }
