--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,9 +1,9 @@
 .vscode/**
 .vscode-test/**
+node_modules/**
 out/test/**
 test/**
 src/**
 **/*.map
 .gitignore
 tsconfig.json
-vsc-extension-quickstart.md
