add confirmation when deleting DBFS item

--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
 		"onView:databricksFS",
 		"onView:databricksSecrets",
 		"onView:databricksSql",
-		"onView:databricksRepos"
+		"onView:databricksRepos",
+		"onNotebook:jupyter-notebook"
 	],
 	"main": "./out/extension.js",
 	"contributes": {
